<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimularActivity">

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickVolverMenu"
        android:text="@string/boton_vuelta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


    <EditText
        android:id="@+id/edit_altura"
        android:layout_width="198dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="Introduce la altura"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208">

        <requestFocus />
    </EditText>


    <EditText
        android:id="@+id/edit_anchura"
        android:layout_width="198dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="Introduce la anchura"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_estado"
        android:layout_width="414dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Estado del traje (opcional)"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplay4"
        tools:layout_editor_absoluteX="-2dp">

        <requestFocus />
    </EditText>

    <SeekBar
        android:id="@+id/edit_bateria"
        android:layout_width="203dp"
        android:layout_height="49dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDisplay5"
        app:layout_constraintTop_toBottomOf="@+id/edit_estado" />

    <Spinner
        android:id="@+id/edit_simulacion"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplay6"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textViewDisplay1"
        android:layout_width="410dp"
        android:layout_height="49dp"
        android:text="@string/titulo_simular"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>


    <TextView
        android:id="@+id/textViewDisplay2"
        android:layout_width="195dp"
        android:layout_height="51dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/altura_simular"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDisplay3"
        android:layout_width="195dp"
        android:layout_height="51dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/anchura_simular"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDisplay4"
        android:layout_width="195dp"
        android:layout_height="51dp"
        android:layout_marginTop="216dp"
        android:gravity="center"
        android:text="@string/estado_simular"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDisplay5"
        android:layout_width="195dp"
        android:layout_height="51dp"
        android:layout_marginTop="380dp"
        android:gravity="center"
        android:text="@string/bateria_simular"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDisplay6"
        android:layout_width="195dp"
        android:layout_height="51dp"
        android:layout_marginTop="468dp"
        android:gravity="center"
        android:text="@string/simulaicon_simular"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickGuardar"
        android:text="@string/boton_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />



</androidx.constraintlayout.widget.ConstraintLayout>