<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/fondopantalla"
        android:layout_width="459dp"
        android:layout_height="401dp"
        android:src="@drawable/traje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-24dp" />

    <ImageView
        android:id="@+id/fondotitulo"
        android:layout_width="301dp"
        android:layout_height="212dp"
        android:src="@drawable/imgmaintitulo"
        app:layout_constraintBottom_toTopOf="@+id/fondopantalla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textViewDisplay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="409dp"
        android:layout_height="91dp"
        android:gravity="center"
        android:text="@string/titulo_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        tools:visibility="visible"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:onClick="onClickSimularDatos"
        android:text="@string/boton_simular"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClickVerHistorico"
        android:text="@string/boton_historico"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:onClick="onClickUltimaSimulacion"
        android:text="@string/boton_ultimo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>